--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
